minor align fix on package set

--- a/app_front/app/stylesheets/customer/components/_package-set-block.sass
+++ b/app_front/app/stylesheets/customer/components/_package-set-block.sass
@@ -48,6 +48,7 @@
       display: inline-block
 
   +part(content)
+    width: 100%
     +breakpoint('mobile')
       display: inline-block
 
